--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "bottoken": "MTE0MzE1ODIxNTk1NDE0OTQ0Ng.GHn5W5.ThUxa5baOHI5uK14RWrplotVRtjj1i3AMXYMos",
+  "bottoken": "",
   "ownerid": "1138897889213562890",
   "owerid2": "1083444070719967304",
   "ownerid3": "",
@@ -19,8 +19,8 @@
     "1155891700569481296"
   ],
   "SpeedUsers": [
-    "MTE1NTg5MTcwMDU2OTQ4MTI5Ng.GUgeLs.v-ykgQR9Xp0rsLnF2OO84TG5I2-74BJfhC9ymw",
-    "MTA4MzQ0NDA3MDcxOTk2NzMwNA.GuzQOA.LVzTLOcF6i-CEQgLboxt3oBtEbzoGF1-tIIcQg"
+    "",
+    ""
     
   ]
 }
